fix: Flicker with browser resizing

--- a/apps/mux/src/index.css
+++ b/apps/mux/src/index.css
@@ -1,6 +1,3 @@
-body {
-    overflow: hidden;
-}
 html,
 body,
 div {
@@ -11,7 +8,9 @@ div {
   font: inherit;
   vertical-align: baseline;
 }
-
+#root {
+    overflow: hidden;
+}
 .progress {
   margin-bottom: 16px;
   height: 12px;
